system/monitoring/templates/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.simonmalm.com`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: monitoring-grafana
              secure: true
              sameSite: none
  tls:
    secretName: simonmalm-com-tls
